使用洪洋开源的动态申请权限的框架

--- a/MwStudyDemo/runtimepermissiondemo/src/main/res/layout/activity_second.xml
+++ b/MwStudyDemo/runtimepermissiondemo/src/main/res/layout/activity_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".BasicActivity">
+    tools:context="com.humanheima.runtimepermissiondemo.SecondActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_basicctivity" />
+    <include layout="@layout/content_second" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
