--- a/MwStudyDemo/android5xdemo/src/main/res/values/styles.xml
+++ b/MwStudyDemo/android5xdemo/src/main/res/values/styles.xml
@@ -10,7 +10,6 @@
         <!--对应EditText编辑时，RadioButton，checkBox选中时的颜色-->
         <item name="colorAccent">@color/colorAccent</item>
         <!--对应ActionBar上文字的颜色-->
-        <item name="android:textColorPrimary">#ff3344</item>
         <item name="android:navigationBarColor">#ff3344</item>
         <item name="android:windowEnterTransition">@transition/explode</item>
         <item name="android:windowExitTransition">@transition/slide</item>
@@ -22,6 +21,14 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <!--对应ActionBar的颜色-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <!--对应状态栏的颜色-->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!--对应EditText编辑时，RadioButton，checkBox选中时的颜色-->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!--对应ActionBar上文字的颜色-->
+        <item name="android:navigationBarColor">#ff3344</item>
         <item name="android:windowEnterTransition">@transition/slide</item>
         <item name="android:windowExitTransition">@transition/fade</item>
         <item name="android:windowReturnTransition">@transition/explode</item>
